Add visual changes and rebuild the site

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -187,6 +187,10 @@ p > code {
     font-style: italic;
 }
 
+.is-rounded {
+    border-radius: 96px;
+}
+
 @media (max-width: 1200px) {
     .content {
         margin-left: 1em;
