--- a/templates/page.html
+++ b/templates/page.html
@@ -4,13 +4,16 @@
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <div itemprop="headline">
         <h1>{{ page.title }}</h1>
+        <p>Written by {{ config.extra.author }}</p>
         <div class="border"></div>
         <time datetime="{{ page.date | date(format="%Y-%m-%d") }}" class="date" itemprop="datePublished">
             {{ page.date | date(format="%d %b %Y") }}
         </time>
+        {% if page.taxonomies %}
         {% for t in page.taxonomies.tags %}
             <span class="tag" itemprop="name">{{ t }}</span>
         {% endfor %}
+        {% endif %}
     </div>
     <div itemprop="articleBody">
         {{ page.content | safe }}
